Update Index File

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <main>
-      <!-- <img src="./Images/bg-pattern-top.svg" alt="top-pattern" />
-      <img src="./Images/bg-pattern-bottom.svg" alt="bottom-pattern" /> -->
+      <img src="./Images/bg-pattern-top.svg" alt="top-pattern" />
+      <img src="./Images/bg-pattern-bottom.svg" alt="bottom-pattern" />
       <div class="card">
         <img src="./Images/bg-pattern-card.svg" alt="">
 
